fix scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,7 @@ html{
   position: absolute;
   width: 100%;
   height: 100%;
+  overflow: hidden;
   background-color: #448b7dcf;
   /*background-color: #1f556fd1;*/
   z-index: 100;
